<resources>
    <string name="app_name">hola</string>
    <string name="splash_text_bottom">hola messenger</string>
    <string name="main_menu_settings">settings</string>
    <string name="main_searchable_label">@string/app_name</string>
    <string name="main_searchable_hint">enter people or group</string>

    <!--LoginActivity-->
    <string name="hola_hint_email">email</string>
    <string name="hola_hint_password">password</string>
    <string name="hola_hint_repassword">re-password</string>
    <string name="hola_button_login">login</string>
    <string name="hola_button_forget">forget password?</string>
    <string name="hola_button_signup">new user? signup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- SignupActivity-->
    <string name="hola_button_signup_s">sigup now</string>
    <string name="title_actionbar_s">signup</string>

    <!-- ForgetPasswordActivity-->
    <string name="hola_button_send_reset_password_email">send me a reset email</string>
    <string name="alert_send_reset_password_email_body">we have already sent you an reset password email, please check it in your email box</string>
    <string name="alert_send_reset_password_email_title">reset password email</string>
    <string name="alert_send_reset_password_email_positive_button">ok</string>
    <string name="title_actionbar_f">reset password</string>

    <!-- error message-->
    <string name="err_email_format">wrong email format</string>
    <string name="err_email_exits">sorry that email is used</string>
    <string name="err_email_doesnt_exit">sorry that email is never used yet</string>
    <string name="err_password_too_short">password must be greater or equal 6 digits</string>
    <string name="err_repassword">repassword does not match with password</string>
    <string name="err_username_password">username or password is incorrect</string>

</resources>