<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="24dp"
    android:paddingTop="16dp"
    tools:context=".ui.auth.ForgetPasswordActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        app:srcCompat="@drawable/ic_app_logo" />

    <!-- Snippet from "Add text fields" section goes here. -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout_f"
        style="@style/Widget.Hola.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/hola_hint_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/Widget.Hola.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/hola_hint_password"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forget_f"
        style="@style/Widget.Hola.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendEmail"
        android:text="@string/hola_button_send_reset_password_email" />

</LinearLayout>